fix nav hover and key visibility

--- a/src/css/_Header.scss
+++ b/src/css/_Header.scss
@@ -48,6 +48,7 @@
         font-size: 1.2rem;
         text-transform: uppercase;
         padding: 33px 25px;
+        width: 100%;
 
         &:after {
           position: absolute;
