--- a/src/css/app.css
+++ b/src/css/app.css
@@ -273,7 +273,8 @@ body button[type=submit] {
         background: #ffffff;
         font-size: 1.2rem;
         text-transform: uppercase;
-        padding: 33px 25px; }
+        padding: 33px 25px;
+        width: 100%; }
         .app-header nav li a:after {
           position: absolute;
           content: '';
